[package]
name = "p2p-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.6", features = ["derive"] }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
libp2p = { version = "0.54", features = [ "tokio", "cbor", "dns", "kad", "noise", "macros", "request-response", "tcp", "websocket", "yamux"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }